PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/Opportunity_Tracking__c.object-meta.xml
<CustomObject>
    <label>영업기회2</label>
    <nameField>
        <label>영업기회 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>