PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opportunity_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>