PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Engagement_Description__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Description__c</fullName>
    <label>Engagement Description</label>
    <type>TextArea</type>
</CustomField>