PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Estimated_Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Month__c</fullName>
    <label>Estimated Close Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>