PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Revenue__c</fullName>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>