PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/In_Charge_AE__c.field-meta.xml
<CustomField>
    <fullName>In_Charge_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE In Charge</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>영업기회2</relationshipLabel>
    <relationshipName>Opportunity_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>