PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/In_Charge_Sales__c.field-meta.xml
<CustomField>
    <fullName>In_Charge_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales In Charge</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>