PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>CASE(  Account_Name__r.Industry, 
&quot;제조업&quot;,&quot;제조업&quot;, 
&quot;광업&quot;,&quot;광업&quot;, 
&quot;건설업&quot;,&quot;건설업&quot;, 
&quot;운수업&quot;,&quot;운수업&quot;, 
&quot;출판, 영상, 방송통신 및 정보서비스&quot;,&quot;출판, 영상, 방송통신 및 정보서비스&quot;, 
&quot;사업시설관리 및 사업지원서비스업&quot;,&quot;사업시설관리 및 사업지원서비스업&quot;, 
&quot;전문, 과학 및 기술 서비스업&quot;,&quot;전문, 과학 및 기술 서비스업&quot;, 
&quot;보건 및 사회복지사업&quot;,&quot;보건 및 사회복지사업&quot;, 
&quot;농업, 임업 및 어업&quot;,&quot;농업, 임업 및 어업&quot;, 
&quot;전기, 가스, 증기 및 수도사업&quot;,&quot;전기, 가스, 증기 및 수도사업&quot;, 
&quot;도매 및 소매업&quot;,&quot;도매 및 소매업&quot;, 
&quot;숙박 및 음식점업&quot;,&quot;숙박 및 음식점업&quot;, 
&quot;금융 및 보험업&quot;,&quot;금융 및 보험업&quot;, 
&quot;예술, 스포츠 및 여가관련사업&quot;,&quot;예술, 스포츠 및 여가관련사업&quot;,&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>