PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>