PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00. 선택</fullName>
                <default>true</default>
                <label>00. 선택</label>
            </value>
            <value>
                <fullName>02. Suspect Opportunity identified</fullName>
            </value>
            <value>
                <fullName>03. Customer interviewed</fullName>
            </value>
            <value>
                <fullName>05. Budget available/Opportunity qualified</fullName>
            </value>
            <value>
                <fullName>05. Decision Maker Validation</fullName>
            </value>
            <value>
                <fullName>06. Proposal definition approach defined</fullName>
            </value>
            <value>
                <fullName>04. Proposal submitted (Demo)</fullName>
            </value>
            <value>
                <fullName>09. Evaluation committee has recomended us</fullName>
            </value>
            <value>
                <fullName>10. Business issues / Terms resolved</fullName>
            </value>
            <value>
                <fullName>11. contractual issues / terms resolved</fullName>
            </value>
            <value>
                <fullName>12. Decision maker tell us we&apos;ve won</fullName>
            </value>
            <value>
                <fullName>13. All approvals obtained, Date set for signing</fullName>
            </value>
            <value>
                <fullName>14. Authorized engagement letter/contract received</fullName>
            </value>
            <value>
                <fullName>15. Booked</fullName>
            </value>
            <value>
                <fullName>16. Engagement lost to Competitor</fullName>
            </value>
            <value>
                <fullName>18. Potential engagement delayed</fullName>
            </value>
            <value>
                <fullName>19. Contract extension</fullName>
            </value>
            <value>
                <fullName>20. Contracted, Interim Option</fullName>
            </value>
            <value>
                <fullName>21. Contracted, Out Year Option</fullName>
            </value>
            <value>
                <fullName>01. Lead</fullName>
                <isActive>false</isActive>
                <label>01. Lead</label>
            </value>
            <value>
                <fullName>08. Oral presentations completed</fullName>
                <isActive>false</isActive>
                <label>08. Oral presentations completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>