PA_Education/TestMenifest/force-app/main/default/objects/Opportunity_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity_Name_FM_Hyp__c</columns>
    <columns>Status__c</columns>
    <columns>In_Charge_AE__c</columns>
    <columns>In_Charge_Sales__c</columns>
    <columns>Estimated_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>